enable CSRF protection and update Symfony dependencies

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=2c579fe4dcaae178d1456e4e895dd7fb
 ###< symfony/framework-bundle ###
 
