--- a/frankenphp/Caddyfile
+++ b/frankenphp/Caddyfile
@@ -8,7 +8,7 @@
 
 {$CADDY_EXTRA_CONFIG}
 
-http://localhost/ http://edudata.beaupeyrat.com {
+{$SERVER_NAME:localhost} {
 	log {
 		# Redact the authorization query parameter that can be set by Mercure
 		format filter {
